<resources>
    <string name="app_name">AppBase</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="Thankyou">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this SourceBase, would \nyou mind rating us on the Google Play, then?</string>

    <string name="start">Start</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="more_apps">More Apps</string>
    <string name="about">About</string>
    <string name="privacy_policy"><u>Privacy Policy.</u></string>
    <string name="version">Version</string>
    <string name="next">Next</string>
    <string name="confirm_quit">Confirm Quit</string>
    <string name="are_you_sure_want_to_delete_all_calls_scheduled">Are you sure want to delete all calls scheduled?</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>

    <string name="title_intro1">Title intro 1</string>
    <string name="title_intro2">Title intro 2</string>
    <string name="title_intro3">Title intro 3</string>
    <string name="content_intro1">Content intro 1</string>
    <string name="content_intro2">Content intro 2</string>
    <string name="content_intro3">Content intro 3</string>
    <string name="agree">Agree</string>
    <string name="permission">Permission</string>
    <string name="grant_these_permissions_to_use_app_name">Grant these permissions to use \'app name\'</string>
    <string name="camera">Camera</string>
    <string name="storage">Storage</string>
    <string name="note_you_can_also_give_permissions_in_settings_apps_app_name_permissions"><![CDATA[Note: You can also give permissions in Settings --> apps --> App Name -->Permissions]]></string>


</resources>