<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_16sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_343A47"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_14sdp">

            <TextView
                android:id="@+id/tv_title_quit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/confirm_quit"
                android:textColor="@color/color_F1F0FB"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_content_quit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/are_you_sure_want_to_delete_all_calls_scheduled"
                android:textColor="@color/color_A8B5C3"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_quit" />

            <View
                android:id="@+id/view_center"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_19sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_content_quit" />

            <RelativeLayout
                android:id="@+id/btn_cancel_quit_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_19sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/bg_item_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view_center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_content_quit">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginVertical="@dimen/_7sdp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/cancel"
                    android:textColor="@color/color_FFFFFF"
                    android:textSize="@dimen/_10ssp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_quit_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:background="@drawable/bg_item_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_center"
                app:layout_constraintTop_toBottomOf="@+id/tv_content_quit">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginVertical="@dimen/_7sdp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/quit"
                    android:textColor="@color/color_FFFFFF"
                    android:textSize="@dimen/_10ssp" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>